--- a/css/custom.css
+++ b/css/custom.css
@@ -2561,14 +2561,14 @@ header.main-header .header-sticky.active{
     text-align: center;
 }
 
-.post-pagination div{
+.post-pagination ul{
     justify-content: center;
     padding: 0;
     margin: 0;
 }
 
-.post-pagination button,
-.post-pagination button span{
+.post-pagination ul li a,
+.post-pagination ul li span{
     display: flex;
     text-decoration: none;
     justify-content: center;
@@ -2582,17 +2582,14 @@ header.main-header .header-sticky.active{
     font-weight: 700;
     transition: all 0.3s ease-out;
 }
-.post-pagination #pagination{
-	display: flex;
-}
 
-.post-pagination div button:hover{
+.post-pagination ul li a:hover{
     background: var(--primary-color);
     color: var(--accent-color);
 }
 
-.post-pagination button.active button,
-.post-pagination button button:hover{
+.post-pagination ul li.active a,
+.post-pagination ul li a:hover{
     background: var(--primary-color);
     color: var(--accent-color);
 }
@@ -3961,7 +3958,7 @@ header.main-header .header-sticky.active{
         margin-top: 8px;
     }
 
-	.post-single-meta div{
+	.post-single-meta ul li{
         font-size: 18px;
     }
 
